# neopixel_ble_controller

./: .gitignore  CMakeLists.txt  Makefile  README.md  neopixel_controller.toml  sdkconfig.defaults
CAD/: README.md  case.stl  top_cover.stl
components/my_button/: CMakeLists.txt  my_button.c
components/my_button/include/: my_button.h
components/neopixel_grid/: CMakeLists.txt  grid_storage.c  neopixel_grid.c
components/neopixel_grid/include/: grid_storage.h  neopixel_grid.h  rgb_color.h
main/: CMakeLists.txt  main.c
main/ble/: gatt_svr.c  my_ble.c  my_ble.h  utils.c
main/ble/services/dis/: my_dis.c  my_dis.h
main/ble/services/neopixe_grid/: neopixel_grid_service.c  neopixel_grid_service.h  neopixel_grid_service_commands.h
